--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,335 @@
 /* место для вашего кода */
+.overlay{
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background: rgb(0, 0, 0);
+  opacity: 0.6;
+}
+
+/* Стилизация шапки сайта */
+.header {
+  width: 1000px;
+  margin: 0 auto;
+  padding-top: 92px;
+  padding-bottom: 96px;
+  display: grid;
+  color: black;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+}
+
+.header__menu {
+  width: 391px;
+}
+
+.header__links-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 26px;
+  list-style: circle;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__link {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-underline-offset: 3px;
+}
+
+.header__link-before{
+  position: relative;
+}
+
+.header__link-before::before{
+  content: '';
+  position: absolute;
+  padding: 2px 2px;
+  border: 1px solid #000;
+  border-radius: 100%;
+  top: 9px;
+  left: -20px;
+}
+
+.header__logo {
+  text-align: center;
+  width: 148px;
+  height: 105px;
+}
+
+.header__logo-image {
+  width: 135px;
+  height: 105px;
+}
+
+.address {
+  font-style: normal;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24.3px;
+  letter-spacing: 0%;
+  width: 240px;
+  justify-self: end;
+}
+
+.address p, a{
+  text-align: left;
+}
+
+.address a{
+  text-align: left;
+  text-underline-offset: 3px;
+}
+
+/* Стилизация блока с заголовком */
+.cover{
+  position: relative;
+  z-index: 1;
+  background-image: url(/images/cover.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.cover__title {
+  padding-top: 165px;
+  width: 1000px;
+  margin: 0 auto;
+  align-items: center;
+  color: rgb(255, 255, 255);
+  font-size: 100px;
+  font-weight: 700;
+  line-height: 115%;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+}
+
+.cover__title span{
+  display: block;
+}
+
+.aligned-text_center {
+  margin-top: 20px;
+  margin-left: 330px;
+}
+
+.aligned-text_right {
+  margin-top: 20px;
+  margin-left: 615px;
+}
+
+.cover__discription {
+  padding-top: 106px;
+  width: 1000px;
+  align-items: center;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 50px;
+}
+
+.cover__description-text {
+  color: rgb(255, 255, 255);
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0px;
+  word-spacing: 18.5px;
+  text-transform: uppercase;
+}
+
+.bet-button {
+  padding: 12px 32px 11px 31px;
+  background: transparent;
+  border: 1px solid #fff;
+  box-shadow: none;
+  color: rgb(255, 255, 255);
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 26px;
+  text-align: center;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+/* Стилизация блока с карточками */
+.lots {
+  margin: 0 auto;
+  margin-top: 180px;
+  width: 1052px;
+  align-items: center;
+  margin-bottom: 155px;
+}
+
+.lots__heading {
+  margin-left: 40px;
+  margin-bottom: 28px;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 47px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.lots__card-list-item {
+  position: relative;
+  z-index: 1;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.card {
+  width: 334px;
+  height: 596px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card__title {
+  padding: 48px 40px 0;
+  color: rgb(255, 255, 255);
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-decoration-line: underline;
+  text-transform: uppercase;
+}
+
+.card__text {
+  padding: 0 40px 48px;
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 120%;
+  letter-spacing: 0%;
+}
+
+.lots__look-more-link {
+  padding-top: 30px;
+  padding-left: 40px;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23px;
+  letter-spacing: 0%;
+  text-underline-offset: 4px;
+}
+
+/* Стилизация блока с информацией об аукционе */
+.about {
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+.about__logo {
+  position: relative;
+  margin-left: 70px;
+  width: 240px;
+  height: 240px;
+  background: #000;
+  border-radius: 100%;
+}
+.about__logo-image {
+  position: absolute;
+  top: 58px;
+  left: 48px;
+  width: 147px;
+  height: 125px;
+}
+.about__column {
+  margin-top: 101px;
+  padding-left: 17px;
+}
+.about__title {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 47px;
+  text-transform: uppercase;
+}
+.about__text {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.about__text-first{
+  margin-top: 100px;
+}
+
+.about__text-second{
+  margin-top: 24px;
+}
+
+/* Стилизация подвала сайта */
+.footer {
+  margin: 0 auto;
+  margin-top: 180px;
+  padding-bottom: 82px;
+  width: 1000px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: space-between;
+}
+
+.footer__address{
+  margin-right: 105px;
+}
+
+.footer__menu {
+  margin-left: -7px;
+}
+
+.footer__menu-link {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21px;
+  letter-spacing: 0%;
+  text-align: center;
+  text-underline-offset: 3px;
+}
+
+.footer__social-list {
+  width: 240px;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 95px;
+}
+
+.footer__social-link {
+  width: 48px;
+  height: 48px;
+  border: 1px solid #000;
+  border-radius: 100%;
+}
+
+
+
