--- a/styles/style.css
+++ b/styles/style.css
@@ -92,7 +92,7 @@
 .cover{
   position: relative;
   z-index: 1;
-  background-image: url(/images/cover.jpg);
+  background-image: url(../images/cover.jpg);
   background-position: center;
   background-size: cover;
 }
