--- a/styles/style.css
+++ b/styles/style.css
@@ -107,9 +107,19 @@
   text-align: center;
 }
 
+.aligned-text_center span{
+  display: inline-block;
+  letter-spacing: 0px
+}
+
 .aligned-text_right {
   margin-top: 20px;
   text-align: right;
+}
+
+.aligned-text_right span{
+  display: inline-block;
+  letter-spacing: 0px;
 }
 
 .cover__discription {
